--- a/src/scss/components/molecules/project-card.scss
+++ b/src/scss/components/molecules/project-card.scss
@@ -43,6 +43,7 @@
     max-height: 426px;
     overflow: hidden;
     position: relative;
+    width: 100%;
 
     &::after {
       content: '';
@@ -62,6 +63,8 @@
       min-width: 420px;
       transform: scale(1);
       transition: transform 0.5s ease-in-out;
+      object-fit: cover;
+      max-height: 426px;
 
       @media screen and (max-width: 1440px) {
         max-width: 736px;
