--- a/src/scss/components/molecules/project-list.scss
+++ b/src/scss/components/molecules/project-list.scss
@@ -1,16 +1,16 @@
 .project-list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  flex-wrap: wrap;
-  padding: 0 2rem;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 200vw;
   row-gap: 5.5rem;
   column-gap: 2rem;
 
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 998px) {
+    width: 100%;
+    display: grid;
+    flex-wrap: wrap;
+    padding: 0 2rem;
     grid-template-columns: repeat(1, 1fr);
-  }
-
-  @media screen and (max-width: 960px) {
     padding: 0 0.8rem;
     row-gap: 2.5rem;
   }
