--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&family=Montserrat:wght@300;400;600;700&display=swap');
 @import '../abstracts/colors';
+@import '../abstracts/anim';
 
 *:where(
     :not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
