--- a/src/scss/components/organisms/portfolio.scss
+++ b/src/scss/components/organisms/portfolio.scss
@@ -1,6 +1,7 @@
 .portfolio {
   margin: 6rem 0 12rem 0;
   scroll-margin-top: 10rem;
+    animation: fade-in 0.7s ease-in-out;
 
   &__container {
     @include container;
