--- a/src/scss/components/atoms/navbarLink.scss
+++ b/src/scss/components/atoms/navbarLink.scss
@@ -13,18 +13,18 @@
   background-repeat: no-repeat;
 
   transition: font-weight 0.3s, color 0.3s ease-in-out,
-    background-size 0.5s ease-in-out;
+    background-size 0.5s cubic-bezier(0.65, 0, 0.35, 1);
 
   &:hover {
     color: $secondary-300;
     background-size: 100% 1.5px;
     background-position: left bottom;
-    transition: color 0.3s ease-in-out, background-size 0.5s ease-in-out;
+    transition: color 0.3s cubic-bezier(0.65, 0, 0.35, 1), background-size 0.5s cubic-bezier(0.65, 0, 0.35, 1);
   }
 
   &.-active {
     color: $secondary-500;
     font-weight: 600;
-    transition: font-weight 0.3s, color 0.3s ease-in-out;
+    transition: font-weight 0.3s, color 0.3s cubic-bezier(0.65, 0, 0.35, 1);
   }
 }
