--- a/src/scss/components/molecules/hero-content.scss
+++ b/src/scss/components/molecules/hero-content.scss
@@ -60,7 +60,7 @@
       background-size: 0 1.5px;
       background-position: right bottom;
       background-repeat: no-repeat;
-      transition: background-size 0.5s ease-in-out;
+      transition: background-size 0.5s cubic-bezier(0.65, 0, 0.35, 1);
 
       @media screen and (max-width: 1440px) {
         font-size: 1.6rem;
