--- a/src/scss/components/molecules/project-card.scss
+++ b/src/scss/components/molecules/project-card.scss
@@ -10,13 +10,8 @@
   &:hover {
     @media screen and (min-width: 998px) {
       .project-card__image {
-        &::after {
-          opacity: 0;
-          transition: opacity 0.5s ease-in-out;
-        }
-
         img {
-          transform: scale(1.08);
+          transform: scale(1.03);
           transition: transform 0.5s cubic-bezier(0.65, 0, 0.35, 1);
         }
       }
@@ -46,18 +41,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: $primary-800;
-      opacity: 0.15;
-      transition: opacity 0.5s ease-in-out;
-    }
 
     img {
       width: 100%;
@@ -123,7 +106,7 @@
     .description {
       font-size: 1.6rem;
       color: $primary-200;
-      max-width: 90%;
+      max-width: 720px;
 
       @media screen and (max-width: 960px) {
         font-size: 1.4rem;
