feat: nova seção de outros projetos

--- a/src/scss/components/organisms/footer.scss
+++ b/src/scss/components/organisms/footer.scss
@@ -1,9 +1,10 @@
 .footer {
+  margin-top: 7rem;
   background-color: $primary-600;
   height: 100%;
   min-height: 275px;
   @include flex;
-    animation: fade-in 0.7s ease-in-out;
+  animation: fade-in 0.7s ease-in-out;
 
   &__container {
     @include container;
