--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,8 +13,11 @@
 @import './components/molecules/project-list.scss';
 @import './components/molecules/project-card.scss';
 @import './components/molecules/contact-list.scss';
+@import './components/molecules/button.scss';
+@import './components/molecules/list-other-projects.scss';
 
 @import './components/organisms/header.scss';
 @import './components/organisms/hero.scss';
 @import './components/organisms/portfolio.scss';
+@import './components/organisms/more-projects.scss';
 @import './components/organisms/footer.scss';
