--- a/src/scss/components/molecules/project-list.scss
+++ b/src/scss/components/molecules/project-list.scss
@@ -5,13 +5,14 @@
   row-gap: 5.5rem;
   column-gap: 2rem;
 
-  @media screen and (max-width: 998px) {
+  @media screen and (max-width: 1081px) {
     width: 100%;
     display: grid;
     flex-wrap: wrap;
     padding: 0 2rem;
     grid-template-columns: repeat(1, 1fr);
     padding: 0 0.8rem;
-    row-gap: 2.5rem;
+    row-gap: 4.5rem;
+    margin-bottom: 8rem;
   }
 }
