--- a/src/scss/components/organisms/portfolio.scss
+++ b/src/scss/components/organisms/portfolio.scss
@@ -10,6 +10,10 @@
     max-height: none;
   }
 
+  @media screen and (max-width: 768px) {
+    margin-bottom: 0;
+  }
+
   &__container {
     @include container;
   }
