style: ajustes no card dos projetos

--- a/src/scss/components/molecules/list-other-projects.scss
+++ b/src/scss/components/molecules/list-other-projects.scss
@@ -15,5 +15,10 @@
     @media screen and (max-width: 768px) {
       margin: 6rem 0 2rem;
     }
+
+    .project-card__image img {
+      width: 100% !important;
+      min-width: 100% !important;
+    }
   }
 }
