--- a/src/scss/components/molecules/hero-content.scss
+++ b/src/scss/components/molecules/hero-content.scss
@@ -57,7 +57,7 @@
       @include flex(flex-start, center);
       display: inline-flex;
       background-image: linear-gradient($secondary-300, $secondary-300);
-      background-size: 0 1.5px;
+      background-size: 0 2px;
       background-position: right bottom;
       background-repeat: no-repeat;
       transition: background-size 0.5s cubic-bezier(0.65, 0, 0.35, 1);
@@ -83,7 +83,7 @@
       }
 
       &:hover {
-        background-size: 100% 1.5px;
+        background-size: 100% 2px;
         background-position: left bottom;
       }
     }
@@ -113,12 +113,18 @@
       width: 100%;
       height: auto;
       min-width: 444px;
+      border-radius: 1.8rem;
+      
       @media screen and (max-width: 1440px) {
         max-width: 444px;
       }
 
       @media screen and (max-width: 1280px) {
         min-width: 344px;
+      }
+
+      @media screen and (max-width: 768px) {
+        border-radius: 1rem;
       }
     }
   }
