--- a/src/scss/components/molecules/hero-content.scss
+++ b/src/scss/components/molecules/hero-content.scss
@@ -114,7 +114,7 @@
       height: auto;
       min-width: 444px;
       border-radius: 1.8rem;
-      
+
       @media screen and (max-width: 1440px) {
         max-width: 444px;
       }
@@ -150,6 +150,12 @@
       text-decoration: underline;
       margin-left: 0.4rem;
       color: $secondary-300;
+      transition: opacity 0.3s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+        transition: opacity 0.3s ease-in-out;
+      }
     }
   }
 }
