feat: tratamento de projeto sem link e remoção de assets

--- a/src/scss/components/molecules/project-card.scss
+++ b/src/scss/components/molecules/project-card.scss
@@ -31,6 +31,10 @@
     }
   }
 
+  .withoutLink {
+    pointer-events: none;
+  }
+
   &__container {
     @include flex(flex-start, flex-start);
     flex-direction: column;
